config(docker): update JAVA_OTPS